--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>网易云音乐</title>
   </head>
   <body>
     <div id="root"></div>
